--- a/stilus.css
+++ b/stilus.css
@@ -8,6 +8,7 @@
 }
 
 body{
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,9 +16,28 @@ body{
     background-color: rgb(112, 153, 241);
     background-size: cover;
     background-position: center;
+
 }
 
+
+.logo {
+    
+    margin-top: -5px;
+    margin-left: -60px;
+    
+}
+
+
+.navigacio{
+    margin-top: -30px;
+    
+}
+  
+
+
+
 header{
+
     position: fixed;
     top: 0;
     left: 0;
@@ -28,11 +48,18 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 99;
+
 }
-.logo{
-    font-size: 60px;
-    color: black;
+
+header{
+    background-color: black;
 }
+
+
+
+
+
+
 .navigacio a{
     position: relative;
     font-size: 20px;
