--- a/stilus.css
+++ b/stilus.css
@@ -34,11 +34,18 @@ body{
     
 }
 
+
+
 .navbar{
 
-    margin-top: 7px;
-    margin-left: 1095px;
+    margin-top: 70px;
+    margin-left: 100px;
+    font-size: 80px;
 
+}
+
+p{
+    font-size: 20px;
 }
   
 
@@ -50,7 +57,7 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 40px 100px;
+    padding: 20px 100px;
     background: transparent;
     display: flex;
     justify-content: space-between;
@@ -67,12 +74,31 @@ header{
 
 }
 
+
+
 .felirat{
 
     display: inline-block;
+    margin-left: 130px;
+    color: aliceblue;
+    padding:1px;
 
 }
 
+/* .felirathoz tartozik */
+h1{
+    
+    font-family: "fantasy";
+    font-size: 70px;
+    font-style: normal;
+    font-variant: small-caps;
+    font-weight: 700;
+    line-height: 24.5px;
+    display: inline-block;
+    
+       
+
+}
 
 
 
