--- a/Turbos-stilus.css
+++ b/Turbos-stilus.css
@@ -108,8 +108,26 @@ header{
 /*------------------------------------------------------------------------*/
 
 
+/* Reszponzív logo beállítások */
+.logo {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    width: 100%; /* Teljes szélességű logó */
+    max-width: 200px; /* Maximum szélesség 280 pixel */
+    height: auto;
+}
+
+@media only screen and (max-width: 280px) {
+    .logo {
+        top: 5px; /* Példa: az abszolút pozíció módosítása kisebb képernyőn */
+        left: 10px;
+    }
+}
+
 
 /* Lethal Omen felirat -----------------------*/
+
 .felirat{
 
     display: inline-block;
@@ -131,30 +149,24 @@ header{
 
 } 
 
-/*-----------------------------------------*/
 
 
 
-/*reszponzív genyo a mobilos felülethez (a 3 vízszintes vonalas cuccos*/
 
-
-
-/*
-Ezt azért tettem komentbe mert zavarva a reszponzív vonalas cuccos genyot irl megkérded megmutatom itt nem tudom úgy átadni
-.logo {
-    
-    position: absolute; 
-    top: 5px; 
-    left: 10px;
-    
-}
-*/
+ 
 
 
 
 
 
-/* Hamburger ikont állítja (3 vízszintes rövid vonal)*/
+
+
+
+
+
+
+/* Reszponzív genyo a mobilos felülethez */
+    /* Hamburger ikont állítja (3 vízszintes rövid vonal)*/
 .checkgomb{
 
     font-size: 30px;
@@ -202,6 +214,7 @@ Ezt azért tettem komentbe mert zavarva a reszponzív vonalas cuccos genyot irl 
         transition: all .5s;
 
         /*Ezzel tudod a felugró ablatok fentebb vagy lentebb állítani*/
+         /* Ezt úgy állítgasd, hogy a hamburger ikont ne takarja be mert azzal tudjuk bezárni ezt a navbárat */
         top: 200px;
 
 
@@ -210,7 +223,7 @@ Ezt azért tettem komentbe mert zavarva a reszponzív vonalas cuccos genyot irl 
 
 
     .gombloginfel{
-        /*Ezzel hoztam egyvonalba a Bejelentkezést a többi opcióval*/
+        /*Ezzel hoztam egyvonalba a Bejelentkezést a többi opcióval, NE NYÚLJ HOZZÁ!*/
         margin-left: 42px;
         
     }
@@ -244,21 +257,29 @@ Ezt azért tettem komentbe mert zavarva a reszponzív vonalas cuccos genyot irl 
         text-decoration: none;
         color: white;
         font-size: 20px;
+
         /*Ezt innen kiveszed nagy hézag lesz az opciók között*/
         display: block;
         padding: 0px;
     }
     
     /* Aktív állapotú opciók formázása */
-    .navigacio .navbar ul li a:active {
-        text-decoration: none !important;
-        color: inherit;
+
+    /*--------------------------------------------------------------------------------------------------*/
+    
+    .navigacio .navbar ul li a:focus {
+        text-decoration: none !important; /* Aláhúzás eltávolítása */
+        color: inherit; /* Az aktív link színe az örökölt szín legyen */
     }
+    
+
+    /*--------------------------------------------------------------------------------------------------*/
     
     /* Opciók szövegmérete */
     nav ul li a {
         font-size: 20px;
     }
+
     
     a:hover,a.active {
         background: none;
@@ -269,9 +290,8 @@ Ezt azért tettem komentbe mert zavarva a reszponzív vonalas cuccos genyot irl 
     #lecsekkolas:checked ~ ul {
         left:0;
     }
+
     
-
-
 }
 
 
@@ -315,18 +335,48 @@ Ezt azért tettem komentbe mert zavarva a reszponzív vonalas cuccos genyot irl 
 
 
 
-.navbar a::after{
+/* Ez húzza alá a navbár elemeit */
+
+.navbar ul li {
+    /*Ehhez itt ne nyúlj mert az összes opciót akkor aláhúzza a rosszbajba*/
+    position: relative;
+}
+
+.navbar ul li:not(:last-child)::after {
     content: '';
     position: absolute;
-    left: -35px;    
-    bottom: 2px;
-    width: 130%;
-    height: 4px;
+    /* Az opciók alá helyezi a vonalat */
+    bottom: 40px; 
+    left: 0;
+    width: 100%;
+    /* Vonal vastagsága */
+    height: 4px; 
     background: white;
     border-radius: 5px;
+    /* Kezdetben nincs látható */
     transform: scaleX(0);
-    transition: transform .5s;
+    /* Animáció a méretváltozáshoz */
+    transition: transform 0.3s; 
 }
+
+/* Amikor a kurzor fölé kerül egy menüelem */
+.navbar ul li:hover::after {
+    transform: scaleX(1);
+}
+
+/* Bejelentkezés aláhúzásának eltávolítása */
+    /* Ez pseudo elem (last-child) - kiválasztja az utolsó gyermek elemet az őt tartalmazó szülőelemen belül
+        Tehát a mostoha gyerek vagy a középső gyerek aki nem kapja meg az aláhúzást (legalsó listaelem) */
+.navbar ul li:last-child::after {
+    display: none;
+}
+
+
+
+
+
+
+
 
 
 
