Kártyák megjelenési efektel
flip.png-vel ne foglalkozzatok az volt az eredeti terv, hogy az lesz eredetileg a kártyákat borító függöny de nem sikerült ezért egy fekete efektel oldottam meg. Szabályzat oldalon a kártyák feketén jönnek be és ahogy a felhasználó rájuk kattint megjelenik a kártya efektel.

--- a/public/css/omen.css
+++ b/public/css/omen.css
@@ -112,9 +112,28 @@ nav .nav-link{
     
  }
 }
+
+
 /* szabalyzat.blade.omen-ben a kártyák méretének felbontása*/
 .kepmeretezes{
 
-    width: 20%; /* Például, a kép szélességét 50%-ra csökkenti */
-    margin-top: -28px; /* Például, elhelyezi a képet 20 pixellel lejjebb */
+    width: 20%; 
+    margin-top: -28px; 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Sötét árnyék hozzáadása */
 }
+
+
+.card-img {
+    filter: brightness(0%);
+}
+
+
+
+
+
+
+
+
+
+
+
