--- a/public/css/omen.css
+++ b/public/css/omen.css
@@ -94,10 +94,12 @@ nav .nav-link{
 
 .mt-10{
     margin-top: 80px !important;
+    color: white !important;
 }
 
 .anima{
     animation: anima 2s normal forwards ease-in-out ;
+    color: white !important;
 }
 
 
@@ -142,7 +144,7 @@ nav .nav-link{
 
 .center-button {
     margin-left: 5% !important;
-    border: 1px solid black !important;
+    border: 1px solid rgb(0, 0, 0) !important;
     margin-bottom: 80px !important;
     margin-top: 180px !important;
 }
@@ -157,18 +159,6 @@ nav .nav-link{
     text-shadow: 0 0 10px rgba(0, 19, 129, 0.8); /* Árnyék a szöveg mögött */
     
 }
-.hatter{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: "{{asset('img/hatter.jpg')}}";
-}
-
-
 
 
 
