--- a/public/css/omen.css
+++ b/public/css/omen.css
@@ -3,10 +3,8 @@
 
 .navbar{
     min-height: 150px !important;
-    backdrop-filter: blur(20px) !important;
-    position:relative !important;
-   
-    
+    background-color: black !important;
+
 }
 
 
@@ -163,6 +161,14 @@ nav .nav-link{
     text-shadow: 0 0 10px rgba(0, 19, 129, 0.8); /* Árnyék a szöveg mögött */
     
 }
+  
+
+
+
+
+
+
+
 
 
 
