header blur használata
Co-Authored-By: F.Dávid <118255717+Judzsin@users.noreply.github.com>

--- a/public/css/omen.css
+++ b/public/css/omen.css
@@ -3,8 +3,8 @@
 
 .navbar{
     min-height: 150px !important;
-    background-color: black !important;
-
+    background-color: transparent !important;
+    backdrop-filter: blur(20px);
 }
 
 
