Képek sikeresen felvannak töltve adatbázisból
Co-Authored-By: Dracula <44154833+666Dracula999@users.noreply.github.com>
Co-Authored-By: Semencki Dávid <57768850+davidvok-coder@users.noreply.github.com>

--- a/public/css/omen.css
+++ b/public/css/omen.css
@@ -288,6 +288,15 @@ nav .nav-link{
 
 }
 
+.cards{
+    margin-left: 40%;
+    margin-right: 40%;
+}
+
+.cards2{
+    background-color: white;
+
+}
 
 
 
